    * added support for ircs: URLs (secure IRC)
    * it is allowed now to use interwiki links with empty pagename, like
      MoinMoin: (no page name after the colon). MoinMoin then uses the current
      page name as the default. This is a useful abbreviation for TwinPages in
      other wikis.
    * it is now supported to resize an image from within the gui editor 

  Bugfixes:
    * on action "info" page, "revert" link will not be displayed for empty page
      revisions (but you just can delete the current page to get an empty rev.)
    * fix vanishing strike markup after gui editor usage
    * fix deletion of empty Interwiki links ([wiki:MoinMaster: mm entry page])
    * fix mod_python attachment upload bug (thanks to Nick Phillips)
    * fix show_version to show it in the same way as SystemInfo
    * allow "-" in usernames (fixes "Invalid user name" msg)
    * fixed smiley caching bug (smileys didn't change theme)
    * fixed backtrace when user removed css_url entry from user_form_fields
    * Fixed the output of macro and "attachment:" usages of the rst parser.
    * Removed Twisted request object reverse DNS lookup
    * cfg.editor_quickhelp was not parsed with the wiki parser when customized
    * fixed MoinMoin:MoinMoinBugs/GuiEditorDeletesNewBulletText
    * fixed MoinMoin:MoinMoinBugs/HtmlTextConvertTables
    * updated ImageLink macro
    * Added a (less broken) MoinMoin.support.difflib, details see there.
    * BadContent and LocalBadContent now get noindex,nofollow robots header,
      same as POSTs.
    * Fixed handling of anchors in wiki links for the Restructured text parser.
    * Fixed http header output.
    * Fixed request.cfg corruption in the fckdialog code that could lead
      to e.g. stalled servers (thanks to David Linke)
    * Fixed typo in NewPage that lead to a NameError.
    * Fixed standalone server failing to shutdown if interface == "".
    * Conflict resolution fixes.